# Stereo-Detection

BM(C++)/: BM.cpp  CMakeLists.txt
BM(Python)/: BM.py
SGBM(C++)/: CMakeLists.txt  SGBM.cpp  SGBM_cuda.cpp
SGBM(Python)/: sgbm-video.py
Win_tensorrt/: python_trt.py
yolov5-v6.1-pytorch-master/: predict.py  sgbm-video.py  yolo.py
双目视觉资料/: 双目测距函数参数说明.md  双目测距理论及其python实现.md  基于MATLAB的双目相机标定.md
